[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/studak/studak_closed.png" type="Texture" id=1]
[ext_resource path="res://sprites/studak/studak_open.png" type="Texture" id=2]
[ext_resource path="res://scripts/studak.gd" type="Script" id=3]
[ext_resource path="res://sprites/studak/img_67992.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.33282, 8.36747 )

[node name="studak" type="RigidBody2D"]
position = Vector2( 32, 0 )
input_pickable = true
collision_layer = 2
collision_mask = 0
gravity_scale = 0.0
can_sleep = false
script = ExtResource( 3 )

[node name="main_col" type="CollisionPolygon2D" parent="."]
scale = Vector2( 1.4, 1.4 )
polygon = PoolVector2Array( 20, -17, -20, -17, -20, 18, 8, 18, 8, 8, 20, 8 )

[node name="sec_col" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 16, 0 )
scale = Vector2( 1.4, 1.4 )
polygon = PoolVector2Array( -71, -17, -32, -17, -32, 18, -61, 18, -61, 8, -71, 8 )
disabled = true

[node name="as_right" type="Sprite" parent="."]
position = Vector2( 3.8147e-06, 0.5 )
texture = ExtResource( 1 )

[node name="ot_1" type="Sprite" parent="."]
visible = false
position = Vector2( -28, 0.5 )
texture = ExtResource( 2 )

[node name="right_a" type="Area2D" parent="."]
position = Vector2( -22, -33 )
scale = Vector2( 1.1, 0.8 )

[node name="r_png" type="Sprite" parent="right_a"]
position = Vector2( 37.7781, 63.5194 )
rotation = -3.14159
scale = Vector2( 0.0151076, 0.0203484 )
texture = ExtResource( 4 )

[node name="right" type="CollisionShape2D" parent="right_a"]
position = Vector2( 38, 64 )
shape = SubResource( 1 )

[node name="left_a" type="Area2D" parent="."]
visible = false
position = Vector2( 14, -15 )
scale = Vector2( 1, 0.8 )

[node name="l_png" type="Sprite" parent="left_a"]
position = Vector2( -88, 40 )
rotation = -3.14159
scale = Vector2( -0.015, 0.02 )
texture = ExtResource( 4 )

[node name="left" type="CollisionShape2D" parent="left_a"]
position = Vector2( -88, 40 )
shape = SubResource( 1 )
[connection signal="input_event" from="." to="." method="_on_otchet_input_event"]
[connection signal="input_event" from="right_a" to="." method="_on_right_a_input_event"]
[connection signal="input_event" from="left_a" to="." method="_on_left_a_input_event"]
